--- a/web-dev/style.css
+++ b/web-dev/style.css
@@ -1,6 +1,8 @@
 body {
-    max-width: 1000px;
+
     margin: auto;
-    background: #FAFAFA;
+
+    background: #d56767;
     font-family: Helvetica;
+
 }
